2003-02-21  Kevin Breit  <mrproper@ximian.com>

	* en/Gtk/Arrow.xml: Fixed a small error where a . was missing at the end of a sentence.

2003-02-21  Duncan Mak  <duncan@ximian.com>

	* en/Gtk/Arrow.xml: Kevin Breit, <mrproper@ximian.com>.

	* en/Gtk/Misc.xml: Raphael J. Schmid, <raphael@arrivingarrow.net>.

	* en/Gtk/CornerType.xml: Kevin Breit, <mrproper@ximian.com>.

	* en/Gtk/AccelLabel.xml: Hector E. Gomez Morales <hgomez_36@flashmail.com>.

	* en/Gtk/AccelFlags.xml: Hector E. Gomez Morales <hgomez_36@flashmail.com>.
	
2003-02-19  Jeffrey Stedfast  <fejj@ximian.com>

	* en/Gdk/GC.xml: Documented.

2003-02-17  Duncan Mak  <duncan@ximian.com>

	* AtkSharp/*.xml:
	* Gdk/*.xml:
	* GdkSharp/*.xml:
	* GladeSharp/*.xml:
	* Gnome/*.xml:
	* GnomeSharp/*.xml:
	* Pango/*.xml: Some ref/out changes.

2003-02-17  Duncan Mak  <duncan@ximian.com>

	* makefile: Some makefile changes.

	* en/Gtk/Entry.xml: Patch from Lee Mallabone
	<mono-docs@fonicmonkey.net> to add some documentation text for the
	Gtk.Entry class.

2003-02-14  Duncan Mak  <duncan@ximian.com>

	* en/*: Updated the docs and added a new Maintainer attribute, also
	fixed the generator to produce 'ref/out' modifiers for parameters.

2003-02-14  Duncan Mak  <duncan@ximian.com>

	* makefile: Added a makefile.
	* all.xml: Indexer file for the doc browser.