@@ -1,14 +1,18 @@
 <Type Name="HSeparator" FullName="Gtk.HSeparator">
-  <TypeSignature Language="C#" Value="public class HSeparator : Gtk.Separator, Implementor, IWrapper, IWrapper, IDisposable" Maintainer="auto" />
+  <TypeSignature Language="C#" Value="public class HSeparator : Gtk.Separator, Implementor, IWrapper, IWrapper, IDisposable" Maintainer="Kevin Breit" />
   <AssemblyInfo>
     <AssemblyName>gtk-sharp</AssemblyName>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
     <Attributes />
   </AssemblyInfo>
-  <ThreadSafetyStatement>To be added</ThreadSafetyStatement>
+  <ThreadSafetyStatement>HSeparator is not a thread safe object.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>The HSeparator widget is a horizontal separator, used to group the widgets within a window.</summary>
+    <remarks>
+      <para>
+        The HSeparator widget is a horizontal separator, used to group the widgets within a window. It is not used as a separator within menus. To create a separator in a menu create an empty <see cref="T:Gtk.SeparatorMenuItem"/> widget and add it to the menu with <see cref="M:Gtk.Menu.Append"/>.
+    </para>
+  </remarks>
   </Docs>
   <Base>
     <BaseTypeName>Gtk.Separator</BaseTypeName>
@@ -37,8 +41,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Disposes of this widget</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName=".ctor">
@@ -49,10 +53,10 @@
         <Parameter Name="gtype" Type="System.UInt32" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Internal constructor</summary>
         <param name="gtype">To be added: an object of type 'uint'</param>
-        <returns>To be added: an object of type 'Gtk.HSeparator'</returns>
-        <remarks>To be added</remarks>
+        <returns>A new horizontal separator</returns>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName=".ctor">
@@ -63,10 +67,10 @@
         <Parameter Name="raw" Type="System.IntPtr" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="raw">To be added: an object of type 'IntPtr'</param>
-        <returns>To be added: an object of type 'Gtk.HSeparator'</returns>
-        <remarks>To be added</remarks>
+        <summary>Internal construction</summary>
+        <param name="raw">A pointer to a HSeparator, as returned by the Gtk+ C API.</param>
+        <returns>>A C# Gtk.HSeparator that wraps the <paramref name="raw"/> parameter.</returns>
+        <remarks><para>If you don't already know that you need this constructor, it should not be used.</para></remarks>
       </Docs>
     </Member>
     <Member MemberName=".ctor">
@@ -75,9 +79,9 @@
       <ReturnValue />
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'Gtk.HSeparator'</returns>
-        <remarks>To be added</remarks>
+        <summary>Constructor</summary>
+        <returns>A horizontal separator.</returns>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="GType">
@@ -87,9 +91,9 @@
         <ReturnType>System.UInt32</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'uint'</returns>
-        <remarks>To be added</remarks>
+        <summary>Get the type of this object, as registered with the GLib object system.</summary>
+        <returns>A number that uniquely identifies this type in the GLib object system.</returns>
+        <remarks><para>Mostly for internal use.</para></remarks>
       </Docs>
     </Member>
   </Members>
